<resources>
    <string name="app_name">慧行教育</string>
    <string name="tab_index">学习</string>
    <string name="tab_live">直播</string>
    <string name="tab_zone">社区</string>
    <string name="tab_person">我的</string>
    <string name="tab_search_hint_text">搜索课程名称</string>


    <string name="index_item1">免费课程</string>
    <string name="index_item2">健康系列</string>
    <string name="index_item3">完美伴侣</string>
    <string name="index_item4">亲子教育</string>
    <string name="index_item5">智慧系列</string>
    <string name="index_item6">人生故事</string>
    <string name="index_item7">示例问答</string>
    <string name="index_item8">运动生活</string>
    <string name="hot_course">热门课程</string>
    <string name="vip_no_money">会员免费</string>
    <string name="more_course">更多</string>


    <string name="money_course">付费课程</string>
    <string name="vip_money">会员专享价</string>
    <string name="vip">VIP会员</string>
    <string name="my_vip">我的VIP</string>
    <string name="live_title">直播</string>
    <string name="person_title">账号</string>
    <string name="default_level_desc">普通用户</string>
    <string name="default_level">LV 1</string>
    <string name="wqd_desc">未签到</string>
    <string name="qd_desc">已签到</string>
    <string name="open_vip">开通VIP会员</string>
    <string name="now_open">立即开通</string>
    <string name="next_vip">立即续费</string>
    <string name="vip_special">VIP专属权益</string>
    <string name="study_quickly">为学习加速</string>
    <string name="study_desc">学习关系</string>
    <string name="near_study">最近学习</string>
    <string name="search_edit_hint">智慧课程</string>
    <string name="search">搜索</string>
    <string name="search_hitory">搜索历史</string>
    <string name="hot_subject">热门话题</string>
    <string name="submit">提交</string>
    <string name="start_study">开始学习</string>
    <string name="send_success">发送成功</string>
    <string name="login">登录</string>
    <string name="complete">完成</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="hx_edu">慧行文化</string>
    <string name="hx_welcome">欢迎来到慧行，开启学习之旅</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="verify_hint">请输入验证码</string>
    <string name="invite_code_hint">请输入邀请码(选填)</string>
    <string name="bind_success">绑定成功</string>
    <string name="get_smscode">获取验证码</string>
    <string name="pwd_login">密码登陆</string>
    <string name="new_registe">新用户注册</string>
    <string name="other_way_login">新用户登陆</string>
    <string name="registe">注册</string>
    <string name="read_xieyi">我已阅读并同意</string>
    <string name="registe_xieyi">《注册协议》</string>
    <string name="buy">立即购买</string>
    <string name="sure_order">确认订单</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_ali">支付宝</string>
    <string name="pay_wx">微信</string>
    <string name="pay_bank">银行卡</string>
    <string name="bind_new_bank">绑定新卡</string>
    <string name="sure_pay">确认支付</string>
    <string name="my_order">我的订单</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="pwd_error_tip">请输入正确的密码</string>
    <string name="setting">设置</string>
    <string name="phone">手机号</string>
    <string name="setting_wx">微信</string>
    <string name="edit_pwd">修改密码</string>
    <string name="edit_pay_pwd">支付密码</string>
    <string name="net_play_video">允许3G/4G播放视频</string>
    <string name="net_download_video">允许3G/4G缓存视频</string>
    <string name="clear_cache">清除缓存</string>
    <string name="advice">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="nick">昵称</string>
    <string name="update">修改</string>
    <string name="edit_info">编辑资料</string>
    <string name="edit_nick_desc">VIP会员用户昵称设置成功后一年内可更改5次,非会员用户昵称设置成功后不可再更改哦~</string>

    <string name="start_live">开启直播</string>


    <string name="my_score">我的积分</string>
    <string name="score_detail">积分明细</string>
    <string name="score_shop">积分商城</string>
    <string name="earn_score">赚积分</string>
    <string name="score_rule">积分规则</string>
    <string name="sign_by_sign">已连续签到</string>
    <string name="sign_get_score">签到领积分</string>
    <string name="signed">已签到</string>
    <string name="send_vip">赠送好友: </string>
    <string name="send_vip2">赠送好友</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="send_vip_title">赠送好友会员说明</string>


    <string name="send_vip_desc">慧行文化平台感恩您的用心付出，为朋友送上一份珍贵的礼物，请认真阅读以下内容，确保赠送过程顺利。
\n
1、被赠送人需要完成平台的用户注册且绑定本人手机号。
\n
2、请认真核对填入的好友手机号，以免错误赠送，因用户本人原因产生的错误赠送情况，平台概不负责。
\n
3、该赠送内容为向好友赠送一年的会员特权，会员权益请到相关页面了解。
\n
4、被赠送人将收到您的相关赠送信息。
\n
最后，感恩您的智慧付出，愿您生活顺利，万事如意。</string>

    <string name="please_edit_friend_phone">请输入好友手机号</string>

    <string name="special_title">特权说明</string>

    <string name="special_desc">
                                1、用户的会员特权从充值之时起开始生效，截止到次年的同一时刻结束。\n
2、用户在会员有效期限内享有会员系列课程免费学习的特权。\n
3、用户在会员有效期限内享有非会员系列售卖课程优惠购买的特权（纯积分兑换课程除外）。\n
4、用户在会员有效期限内享有社区内账号尊贵标志展示的特权。\n
5、用户在会员有效期限内免费享有参与奖学计划的资格。\n
6、会员权益的最终解释全归慧行科技文化传播有限公司所有。
                            </string>


    <string name="get_more_score">赚取更多积分</string>
    <string name="day_task">每日任务</string>
    <string name="score_task1_title">观看视频或直播</string>
    <string name="score_task1_desc">累积时长60分钟，+10积分</string>
    <string name="score_task2_title">专业品论员</string>
    <string name="score_task2_desc">参与话题评论三次，+5积分</string>
    <string name="score_task3_title">能量点亮大使</string>
    <string name="score_task3_desc">帖子及评论点赞10次，+5积分</string>
    <string name="score_task4_title">智慧传递大使</string>
    <string name="score_task4_desc">分享课程、直播、帖子到朋友圈3次，+30积分</string>

    <string name="completed">已完成</string>
    <string name="no_completed">未完成</string>
    <string name="sign_suc">签到成功</string>
    <string name="score">积分</string>
    <string name="study_plan">学习计划</string>
    <string name="add">添加</string>
    <string name="add_plan">添加计划</string>
    <string name="success_toast">成功</string>
    <string name="fail_toast">失败</string>
    <string name="wait_plan">待完成计划</string>
    <string name="finish_plan">已完成计划</string>
    <string name="today_plan">今日目标</string>
    <string name="self_score">自我考核积分</string>
    <string name="please_edit_get_score">请输入获得积分数</string>
    <string name="group_score">小组活动积分</string>
    <string name="filter">筛选</string>
    <string name="course_type">课程类型</string>
    <string name="reset">重置</string>
    <string name="my_topic">我的话题</string>
    <string name="publis">发布</string>
    <string name="publis_topic">发布贴子</string>
    <string name="please_edit_topic_title">请输入帖子标题</string>
    <string name="i_want_see">我想说的是...</string>
    <string name="add_subject">添加话题</string>
    <string name="search_subject_hint">搜索话题</string>
    <string name="not_choose_subject">不参与话题</string>
    <string name="no_want_subject">没有想参与的话题</string>
    <string name="top_topic_title">置顶话题</string>
    <string name="more_subject">更多话题</string>
    <string name="send">发送</string>
    <string name="all_comments">全部评论</string>
    <string name="new_comments">最新评论↑</string>
    <string name="reply">回复↑</string>
    <string name="comment_hint">有爱评论~说点好听的</string>

    <string name="score_rule_desc">

        积分规则：\n

平台为了促进所有注册用户的学习和良好的践行习惯，设立了积分体系，用户可以通过每天完成平台设立的签到系统、日常任务及自我设立的践行任务实现积分的获得，购买课程也可以获得对应的积分奖励，获得的积分可以通过积分商城进行相关产品的兑换，或者使用积分以更加优惠的价格购买积分商城内的商品，希望所有用户都能够在慧行文化平台获得更多的智慧和更多的收获。
\n
关于积分的解释权归慧行文化平台所有。
\n
积分获得途径详解：
\n
1、每日签到，让学习变成一种习惯!连续七天可额外获得10积分的奖励！
\n
2、制定并完成每日践行清单，在不断改变自我的过程中，就能获得积分的奖励！
\n
3、完成平台每日发布的学习任务，即可获得积分奖励。
\n
3.1观看视频或直播：累积观看视频或直播每满三十分钟奖励5积分，每日上限10积分；
\n
3.2专业评论员：参与话题评论满三次奖励5积分，每日上限5积分；
\n
3.3能量点赞大使：为社区内的帖子及评论点赞累积满十次奖励5积分，每日上限5积分。
\n
4、开通会员将获得100积分的一次性奖励！
\n
5、单独购买课程也可获得积分！
\n
学习就是财富，赶快行动起来，我们一起为学习的你打call！
    </string>

    <string name="share_qrcode">分享二维码</string>

    <string name="study_rule">

        学习关系规则介绍：\n\n

1、欢迎您来到学习关系系统，您可以通过分享二维码和序列号来邀请身边的朋友加入学习关系。
\n\n
2、您填写的邀请码用户将成为您的学长，每个账户有且只有一次填写机会，不可更改。
\n
3、当其它会员扫描您的二维码和填写您的序列号时，将绑定成为您的学弟学妹。
\n\n
4、平台为您开放一定的查阅权限，您可以查看学习学妹的学弟学妹，以便更有效的帮助学弟学妹进行学习及推广。
\n\n
5、平台将对会员的个人信息进行保密，学习关系内仅展示学长的电话，学弟学妹的展示内容仅为姓名及性别。
    </string>


    <string name="level_rule">
                                等级成长规则：\n成长等级每晋升一级需100经验值，经验值可通过以下途径获得\n1.观看视频或直播20分钟可获得5个经验值，每日最多可获得15个经验值\n2.进行话题参与、评论、点赞、转发，每条增加1个经验值每日最多获得5个经验值；\n3.每日最多可获得15+5=20个经验值

                            </string>
</resources>
