<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.PwdLoginActivity">

   <ImageView
       android:src="@drawable/back"
       android:layout_marginLeft="30dp"
       android:layout_marginTop="50dp"
       android:id="@+id/iv_back"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#222222"
        android:text="@string/pwd_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

   <LinearLayout
       android:layout_marginTop="50dp"
       android:layout_marginRight="50dp"
       android:layout_marginLeft="50dp"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:inputType="number"
           android:hint="@string/phone_hint"
          android:layout_marginBottom="12dp"
           android:textSize="16sp"
           android:textColorHint="#CCCCCC"
           android:id="@+id/et_phone"
           android:background="@null"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       <include layout="@layout/line"/>

       <LinearLayout
           android:gravity="center_vertical"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="12dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:inputType="textPassword"
               android:hint="@string/new_pwd_hint"
               android:layout_weight="1"
               android:textSize="16sp"
               android:textColorHint="#CCCCCC"
               android:id="@+id/et_pwd"
               android:background="@null"
               android:layout_width="0dp"
               android:layout_height="wrap_content" />
           <ImageView
               android:id="@+id/iv_pwd_visible"
               android:src="@drawable/eye_close"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>

       <include layout="@layout/line"/>

       <TextView
           android:id="@+id/tv_forget_pwd"
           android:textColor="@color/theme_color"
           android:layout_marginTop="8dp"
           android:textSize="13sp"
           android:text="@string/forget_pwd"
           android:layout_gravity="right"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@drawable/login_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/complete_btn_height" />
</LinearLayout>