<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentBottom="true"
            android:id="@+id/tv1"
            android:textSize="20sp"
            android:textColor="#040303"
            android:text="@string/hot_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/tv1"
            android:layout_marginLeft="4dp"
            android:textSize="15sp"
            android:textColor="#BABABA"
            android:text="@string/vip_no_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_more_hot_course"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:textSize="15sp"
            android:textColor="#BABABA"
            android:text="@string/more_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="8dp"
        android:id="@+id/recycle_hot_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>