<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:paddingTop="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_circle_universal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="26dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17sp"
                android:textColor="#222222"
                android:text="@string/sign_suc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_score"
                android:textSize="17sp"
                android:textColor="#FDD231"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="17sp"
                android:textColor="#222222"
                android:text="@string/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/line"/>

        <TextView
            android:id="@+id/tv_sure"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/theme_color"
            android:text="@string/sure"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <ImageView
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_suc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>